--- a/genetic_search.ipynb
+++ b/genetic_search.ipynb
@@ -6,24 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import osmnx as ox\n",
-    "import networkx as nx\n",
-    "from IPython.display import IFrame, HTML\n",
-    "from collections import deque\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import sys, random\n",
-    "from problem import *\n",
-    "from utils import *\n",
-    "from itertools import filterfalse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%capture\n",
     "\n",
     "##############################################################################\n",
@@ -49,8 +31,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explanation and Discussion to be done"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import osmnx as ox\n",
+    "import networkx as nx\n",
+    "from IPython.display import IFrame, HTML\n",
+    "from collections import deque\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import sys, random\n",
+    "from problem import *\n",
+    "from utils import *\n",
+    "from itertools import filterfalse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,6 +168,7 @@
     "        firstNode = a[i]\n",
     "        secondNode = a[point]\n",
     "        thirdNode = a[j]\n",
+    "        \n",
     "        # what we are going to do is to try to go\n",
     "        # from first node to the third node with either deleting \n",
     "        # the second node or choose some other intermediate node\n",
@@ -193,9 +201,9 @@
     "    first_point = p1.index(cross_over_point)\n",
     "    second_point = p2.index(cross_over_point)\n",
     "    if probability(0.5):\n",
-    "        return p1[:first_point]+p2[second_point:]\n",
+    "        return p1[:first_point] + p2[second_point:]\n",
     "    else:\n",
-    "        return p2[:second_point]+p1[first_point:]"
+    "        return p2[:second_point] + p1[first_point:]"
    ]
   },
   {
