--- a/genetic_search.ipynb
+++ b/genetic_search.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,11 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def randomized_BFS(G, source, destination, nums_of_paths = 1):\n",
+    "def random_routes(G, source, destination, nums_of_paths = 1):\n",
     "    origin = Node(graph = G, node = G[source], osmid = source, distance = 0, parent = None)\n",
     "    destination = Node(graph = G, node = G[destination], osmid = destination)\n",
     "    nums = nums_of_paths\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "population = randomized_BFS(G, 55808290, 389677909, nums_of_paths=50)"
+    "population = random_routes(G, 55808290, 389677909, nums_of_paths=50)"
    ]
   },
   {
