--- a/genetic_search.ipynb
+++ b/genetic_search.ipynb
@@ -1,40 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%%capture\n",
-    "\n",
-    "##############################################################################\n",
-    "# IGNORE if you are running on a local machine and have all the dependencies #\n",
-    "##############################################################################\n",
-    "\n",
-    "# installing dependencies --- to be able to run on google colab\n",
-    "# it would take 2-3 minutes\n",
-    "!apt-get install libspatialindex-c4v5;\n",
-    "!pip3 install Rtree;\n",
-    "!pip3 install osmnx;\n",
-    "\n",
-    "# you HAVE to upload a number of files and folders used in the code\n",
-    "# problem.py - utils.py - data files inside directory named data\n",
-    "# upload them in the home directory --- don't go into any folder, just press upload button\n",
-    "# and choose these files and folders\n",
-    "# so tthe directory should be \n",
-    "#|- data/       |- graph.html\n",
-    "#|              |- route.html \n",
-    "#|- sample_data/ \n",
-    "#|- problem.py\n",
-    "#|- utils.py"
+    "# Genetic Algorithm"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explanation and Discussion to be done"
+    "We will be trying to find and visualize the path between Equestrian Statue of Edward VII and Bahen Center of Technology around Toronto University campus using genetic algorithm.  \n",
+    "\n",
+    "As you know there are a lot of variations you can do to do genetic algorithms, but we will assume the following in our implementation given the nature of our problem:\n",
+    "\n",
+    "1. Fitness function is used to measure the length of the route.\n",
+    "2. We will be doing real-value GA, so our phenotype is our genotype.\n",
+    "3. We are following generational model for the GA.\n",
+    "4. We are doing 1-point crossover.\n",
+    "5. Mutation for a route is by deleting a gene/node and trying to stitch that gap.\n",
+    "6. Selection is based on fitness-proportionate criteria.\n",
+    "\n",
+    "We will explain these assumptions as we go on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__GENETIC_ALGORITHM__(_source_ , _destination_ , _num of generations_ , _pool size_) __returns__ a route  \n",
+    "&emsp;_pool_ &larr; _pool size_ random-routes between _source_ and _destination_  \n",
+    "&emsp;__for__ _num of generations_ __do__  \n",
+    "&emsp;&emsp; _parents_ &larr; select number of best routes from _pool_  \n",
+    "&emsp;&emsp; _parents_ &larr; crossover _parents_     \n",
+    "&emsp;&emsp; _pool_ &larr; offspring of _parents_ + _parents_  \n",
+    "&emsp;&emsp; _pool_ &larr; mutate _pool_  \n",
+    "&emsp;__endfor__  \n",
+    "&emsp;_route_ &larr; best route in _pool_  \n",
+    "&emsp;__return__ _route_  "
    ]
   },
   {
@@ -365,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
