--- a/genetic_search.ipynb
+++ b/genetic_search.ipynb
@@ -43,9 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'utilities'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-352112d10438>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mutilities\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mitertools\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfilterfalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'utilities'"
+     ]
+    }
+   ],
    "source": [
     "import osmnx as ox\n",
     "import networkx as nx\n",
@@ -54,8 +66,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import sys, random\n",
-    "from problem import *\n",
-    "from utils import *\n",
+    "from utilities import *\n",
     "from itertools import filterfalse"
    ]
   },
@@ -78,7 +89,6 @@
    "source": [
     "location_point = (43.661667, -79.395)\n",
     "G = ox.graph_from_point(location_point, dist=300, clean_periphery=True, simplify=True)\n",
-    "graph_map = ox.plot_graph_folium(G, popup_attribute='name', edge_width=2)\n",
     "fig, ax = ox.plot_graph(G)"
    ]
   },
