--- a/bike_pricing.ipynb
+++ b/bike_pricing.ipynb
@@ -16,8 +16,8 @@
     "\n",
     "The following costs are considered:\n",
     "\n",
-    "- \\$700,000 for manufacturing set-up costs, advertising, etc.\n",
-    "- \\$110 to make each bike\n",
+    "- \$700,000 for manufacturing set-up costs, advertising, etc.\n",
+    "- \$110 to make each bike\n",
     "\n",
     "Based on similar bikes, the company expects sales to follow this “Demand Curve”: Unit sales=70,000 - 200*X where X is the price. This means that if the company set the price:\n",
     "- at \\$0, the company just gives away 70,000 bikes\n",
