explanation of the permutation problems

--- a/TSP_genetic_search.ipynb
+++ b/TSP_genetic_search.ipynb
@@ -1,20 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Genetic Algorithm\n",
+    "\n",
+    "Travelling salesman problem as you probably know at this point is about generating a good permutation of all the vertices in the graph. Assuming that the graph is fully connected, which makes every permutation of the vertices feasible solution for the problem, remember that we didn't have this luxury in our problem of finding the shortest path and we needed to jump through hoops to generate possible solution and doing crossover and mutations. \n",
+    " \n",
+    "\n",
+    "This class of permutation problems, where every permutation is feasible solution, is very common and the methods of crossover and mutation in this class don't depend on the given problem as you would see in this notebook. Having these methods in repertoire is essential.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "import random\n",
-    "import numpy as np\n",
-    "import sys, random\n",
-    "from problem import *\n",
-    "from utils import *\n",
-    "from math import inf\n",
-    "from itertools import permutations"
+    "import networkx"
    ]
   },
   {
@@ -311,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
