changing the model

--- a/TSP_genetic_search.ipynb
+++ b/TSP_genetic_search.ipynb
@@ -9,7 +9,11 @@
     "Travelling salesman problem as you probably know at this point is about generating a good permutation of all the vertices in the graph. Assuming that the graph is fully connected, which makes every permutation of the vertices feasible solution for the problem, remember that we didn't have this luxury in our problem of finding the shortest path and we needed to jump through hoops to generate possible solution and doing crossover and mutations. \n",
     " \n",
     "\n",
-    "This class of permutation problems, where every permutation is feasible solution, is very common and the methods of crossover and mutation in this class don't depend on the given problem as you would see in this notebook. Having these methods in repertoire is essential.  "
+    "This class of permutation problems, where every permutation is feasible solution, is very common and the methods of crossover and mutation in this class don't depend on the given problem as you would see in this notebook. Having these generic methods of mutation and crossover in repertoire is essential.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "Our model is would be strictly "
    ]
   },
   {
