--- a/genetic_search.ipynb
+++ b/genetic_search.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "1. Fitness function is used to measure the length of the route.\n",
     "2. We will be doing real-value GA, so our phenotype is the same as our genotype.\n",
-    "3. We are following generational model for the GA.\n",
+    "3. Our GA model is steady state, where we probablisically choose the best routes to be\n",
+    "   the parents of the next generation. We will deviate from the model a bit and would\n",
+    "   talk about that later.\n",
     "4. We are doing 1-point crossover.\n",
     "5. Mutation for a route is by deleting a random number of gene/node and trying to stitch that gap (TAKES TIME).\n",
     "6. Selection is based on fitness-proportionate criteria.\n",
@@ -187,7 +189,10 @@
     "    \n",
     "    \n",
     "3. Offspring:\n",
-    "   We have talked about this issue of generating children of a route, but here we go again 🧉. We needed to have a deteminstic policy for generating children from a route between specific two nodes. Of course we can't change the first and last node in the route, as they are the source and destination of the route, and we can't just generate permutations of the nodes between them because the graph isn't fully connected and would lead to inadmissible routes. What we do is the same procedure as the mutation method but without choosing the node randomly, we first fail a single node starting from the second node until the node $N-1$ if we have a route with $N$ route and generate a child after stitching the route after the failure. This first pass of successively failing a single node generates $N-2$ children, and at the second pass we fail 2 successive nodes at once starting with the second and third node until the nodes $N-2$ and $N-1$. At the last pass we fail every node between source and destination and we try to find the shortest path between source and destination in the graph without considering any of these nodes. Trying to generate that last child is not a good idea and even infeasible in some situation if we have a lot of node, and if we could find this child why don't you just generate it and terminate your algorithm. So a single route with $N$ route would generate $O(((N-2)+1)*(N-2))/2)$ child, but don't ever generate more that 5-10 children."
+    "   We have talked about this issue of generating children of a route, but here we go again 🧉. We needed to have a deteminstic policy for generating children from a route between specific two nodes. Of course we can't change the first and last node in the route, as they are the source and destination of the route, and we can't just generate permutations of the nodes between them because the graph isn't fully connected and would lead to inadmissible routes. What we do is the same procedure as the mutation method but without choosing the node randomly, we first fail a single node starting from the second node until the node $N-1$ if we have a route with $N$ route and generate a child after stitching the route after the failure. This first pass of successively failing a single node generates $N-2$ children, and at the second pass we fail 2 successive nodes at once starting with the second and third node until the nodes $N-2$ and $N-1$. At the last pass we fail every node between source and destination and we try to find the shortest path between source and destination in the graph without considering any of these nodes. Trying to generate that last child is not a good idea and even infeasible in some situation if we have a lot of node, and if we could find this child why don't you just generate it and terminate your algorithm. So a single route with $N$ route would generate $O(((N-2)+1)*(N-2))/2)$ child, but don't ever generate more that 5-10 children.\n",
+    "   \n",
+    "4. Duplicates:\n",
+    "    Our offspring generation algorithm generates a lot of duplicates that needs to be cleaned before going into the next generation because all the routes are very close to each other. That is where we deviate from the steady-state model and clean those duplicates and add random routes in the pool to compensate this removal, which also helps on diversify your population."
    ]
   },
   {
@@ -220,7 +225,7 @@
     "# size of population; # of routes\n",
     "pool_size = 15\n",
     "# number of parents that pass their genotype to the next generation\n",
-    "# make sure parents_num and pool_size are multiples -- implementation detail\n",
+    "# make sure parents_num and pool_size are multiples \n",
     "parents_num = 3"
    ]
   },
@@ -263,7 +268,8 @@
     "    parents_1 = select_best(pool, parents_num, weights)\n",
     "\n",
     "    # crossover between every possible pair in the parents list \n",
-    "    # this generate \"too many\" routes so we select the best ones\n",
+    "    # this generates (nP2) routes because itertools.product function\n",
+    "    # generate the cartesian product of the set so we select the best and smallest ones \n",
     "    parents_2 = [cross_over(route_1, route_2) for route_1, route_2 in itertools.product(parents_1, repeat = 2)]\n",
     "    parents_2 = heapq.nsmallest(parents_num ,parents_2, key = lambda route : cost(G, route))\n",
     "    \n",
