--- a/TSP_genetic_search.ipynb
+++ b/TSP_genetic_search.ipynb
@@ -328,10 +328,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "firstPermutation, secondPermutation = random_tour(G.nodes, number_of_perms = 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Edge Recombination Crossover"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The offspring of doing crossover by this method depends on the edges between the nodes in each permutation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ERO_crossover(G, firstPermutation, secondPermutation):\n",
+    "    edgeTable = dict()\n",
+    "    elements = firstPermutation[:]\n",
+    "    length = len(elements)\n",
+    "    \n",
+    "    for source in elements:\n",
+    "        edgeTable[source] = list()\n",
+    "        firstPermutationAdj = G[firstPermutation.index(source)]\n",
+    "        secondPermutationAdj = G[secondPermutation.index(source)]\n",
+    "        adjList = list(set().union(firstPermutationAdj, secondPermutationAdj))\n",
+    "        edgeTable[source]= adjList\n",
+    "\n",
+    "    child = list()\n",
+    "    parent = random.choice(elements)\n",
+    "    elements.remove(parent)\n",
+    "\n",
+    "    while len(child)< length:\n",
+    "        child.append(parent)\n",
+    "\n",
+    "        # remove the parent from all the adjacency lists\n",
+    "        for adjList in edgeTable.values():\n",
+    "            try:\n",
+    "                adjList.remove(parent)\n",
+    "            except:\n",
+    "                pass\n",
+    "\n",
+    "        parentAdjList = edgeTable[parent][:]\n",
+    "        del edgeTable[parent]\n",
+    "\n",
+    "        if len(parentAdjList) == 0: continue\n",
+    "        parent = min(parentAdjList, key = lambda parent : len(edgeTable[parent]))\n",
+    "\n",
+    "    return child"
+   ]
   },
   {
    "cell_type": "code",
