ERO and order one

--- a/TSP_genetic_search.ipynb
+++ b/TSP_genetic_search.ipynb
@@ -502,6 +502,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Order 1 Crossover"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is much more simple than the above algorithms. Just copy a random consecutive segment from the first parent into the child and complete the child with elements from the second parent that are not present in the selected segment from the second parent."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ordOne_crossover(firstPermutation, secondPermutation):\n",
+    "    length = len(firstPermutation)\n",
+    "    \n",
+    "    # choose the start and the end of the segment \n",
+    "    # to be copied from the first parent\n",
+    "    start_Segment = random.randint(0, length // 2)\n",
+    "    end_Segment = random.randint(length // 2 + 1, length - 1) + 1\n",
+    "    \n",
+    "    # create a child\n",
+    "    child = list()\n",
+    "    \n",
+    "    # add the randomaly selected segment from the first parent\n",
+    "    child.extend(firstPermutation[start_Segment: end_Segment])\n",
+    "    \n",
+    "    # add what is left from the second parent that wasn't added from the first parent\n",
+    "    residueFromSegment = list(set(secondPermutation) - set(firstPermutation[start_Segment: end_Segment]))\n",
+    "    child.extend(residueFromSegment)\n",
+    "    \n",
+    "    return child"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
