--- a/genetic_search.ipynb
+++ b/genetic_search.ipynb
@@ -216,8 +216,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# number of generation\n",
-    "ngen = 20\n",
+    "# number of generation -- this will take SOME time, change it to 20 or smth to see the results quickly\n",
+    "ngen = 60 \n",
     "# size of population; # of routes\n",
     "pool_size = 15\n",
     "# number of parents that pass their genotype to the next generation\n",
