--- a/genetic_search.ipynb
+++ b/genetic_search.ipynb
@@ -272,7 +272,7 @@
     "    # mutate parents before offspring\n",
     "    parents = [mutate(G, route) for route in parents_2]\n",
     "\n",
-    "    # generate the offspring of these parents -- each 10 parent will generate 30/10=3 child\n",
+    "    # generate the offspring of these parents -- each parent will generate 15/3=5 child\n",
     "    pool = flatten([[*itertools.islice(children_route(G, route), pool_size // parents_num)] for route in parents])\n",
     "    \n",
     "    # this is to remove duplicates from the pool -- implementation detail\n",
